# Otter

./: .env.example  .gitignore  ANALISI_WORKFLOW_ITALIANO.md  ANDROID_SETUP.md  ANDROID_TESTING.md  ARCHITECTURE.md  BINCODE_SERIALIZATION_FIX.md  BOOTSTRAP_API.md  CLA.md  COME_FARE_IDENTITY_EXCHANGE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SUCCESS_SUMMARY.md  CONNECTION_TIMEOUT_FIX.md  CONTRIBUTING.md  COSA_OFFRE_IL_CODICE.md  CURRENT_FEATURES.md  Cargo.toml  DEPLOY_ANDROID.md  DESERIALIZATION_ERROR_DEBUG.md  DISCONNESSIONE_TIMEOUT_RISOLTO.md  ENUM_TAG_DEBUG_GUIDE.md  GOSSIPSUB_VALIDATION_FIX.md  GUI_DONE.md  GUI_ENHANCEMENT_SUMMARY.md  GUI_NETWORK_DASHBOARD.md  GUI_NETWORK_DASHBOARD_VISUAL.md  IDENTITY_EXCHANGE.md  IDENTITY_EXCHANGE_DEBUG.md  IDENTITY_EXCHANGE_FIX_SUMMARY.md  IDENTITY_EXCHANGE_GUIDE.md  IMPLEMENTATION.md  INVIO_MESSAGGI_RISOLTO.md  LICENSE  LICENSE-MIT  LICENSE.md  MESSAGE_SENDING_FIX.md  MOBILE_BUILD.md  Makefile  NEXT_STEPS_DEPLOYMENT.md  OAUTH_PKCE_SETUP.md  (+30 more)
.github/workflows/: ci.yml
crates/otter-cli/: Cargo.toml
crates/otter-cli/src/: main.rs
crates/otter-crypto/: Cargo.toml
crates/otter-crypto/src/: lib.rs
crates/otter-gui/: Cargo.toml
crates/otter-gui/src/: main.rs  main.rs.bak
crates/otter-identity/: Cargo.toml
crates/otter-identity/src/: lib.rs  trust.rs
crates/otter-messaging/: Cargo.toml
crates/otter-messaging/src/: lib.rs
crates/otter-mobile/: Cargo.toml
crates/otter-mobile/src/: lib.rs
crates/otter-network/: Cargo.toml
crates/otter-network/examples/: beacon_finder.rs  bootstrap_test.rs  bootstrap_with_protocols.rs  dht_provider_test.rs  local_peer_discovery_test.rs  peer_search_test.rs
crates/otter-network/src/: bootstrap.rs  heartbeat.rs  lib.rs  webrtc.rs
crates/otter-network/tests/: phase1_dht_foundation.rs  phase2_heartbeat.rs  phase3_peer_cache.rs  phase5_connection_pool.rs  phase7_production_tests.rs
crates/otter-protocol/: Cargo.toml
crates/otter-protocol/src/: lib.rs
crates/otter-storage/: Cargo.toml
crates/otter-storage/src/: lib.rs
crates/otter-voice/: Cargo.toml
crates/otter-voice/src/: lib.rs
flutter_app/: README.md  pubspec.yaml
flutter_app/android/: README.md  gradle.properties  local.properties.example  settings.gradle
flutter_app/android/app/: build.gradle  proguard-rules.pro
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/otter/chat/: MainActivity.kt
flutter_app/ios/: Podfile  README.md
flutter_app/ios/Runner/: GeneratedPluginRegistrant.m
flutter_app/lib/: main.dart
flutter_app/lib/models/: app_state.dart
flutter_app/lib/screens/: home_screen.dart  loading_screen.dart  main_app_screen.dart
flutter_app/lib/services/: native_bridge.dart  network_service.dart
otter-dist/: README.md
tests/: multi_peer_tests.rs
