[workspace]
resolver = "2"
members = [
    "crates/otter-identity",
    "crates/otter-crypto",
    "crates/otter-network",
    "crates/otter-protocol",
    "crates/otter-messaging",
    "crates/otter-storage",
    "crates/otter-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Otter Contributors"]

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# libp2p for networking
libp2p = { version = "0.52", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "macros",
] }

# WebRTC
webrtc = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
crossterm = "0.27"

# Other utilities
bytes = "1.5"
hex = "0.4"
bs58 = "0.5"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
void = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
