[package]
name = "otter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "otter"
path = "src/main.rs"

[dependencies]
otter-identity = { path = "../otter-identity" }
otter-crypto = { path = "../otter-crypto" }
otter-network = { path = "../otter-network" }
otter-messaging = { path = "../otter-messaging" }
otter-protocol = { path = "../otter-protocol" }
otter-voice = { path = "../otter-voice" }
tokio = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libp2p = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
dirs = "5.0"
