[package]
name = "otter-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata]
windows_subsystem = "windows"

[[bin]]
name = "otter"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
