[package]
name = "otter-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata]
windows_subsystem = "windows"

[[bin]]
name = "otter"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "6.0"
anyhow = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
base64 = "0.22"
open = "5.0"
dotenvy = "0.15"
chrono = "0.4"
otter-network = { path = "../otter-network" }
otter-protocol = { path = "../otter-protocol" }
libp2p = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
once_cell = "1.19"
