[package]
name = "otter-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
