[package]
name = "otter-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
otter-identity = { path = "../otter-identity" }
otter-crypto = { path = "../otter-crypto" }
otter-network = { path = "../otter-network" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.1"
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
bincode = { workspace = true }
