[package]
name = "otter-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
otter-network = { path = "../otter-network" }
otter-crypto = { path = "../otter-crypto" }
otter-identity = { path = "../otter-identity" }
otter-messaging = { path = "../otter-messaging" }
otter-storage = { path = "../otter-storage" }
otter-protocol = { path = "../otter-protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.52", features = ["gossipsub", "kad", "identify", "ping", "tcp", "noise", "yamux", "mdns"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
