[package]
name = "otter-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
otter-identity = { path = "../otter-identity" }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
void = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.11"
dirs = "5.0"
