[package]
name = "otter-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
otter-identity = { path = "../otter-identity" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.1"
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
